final prototype of website

--- a/public/index.html
+++ b/public/index.html
@@ -111,10 +111,10 @@
             <div class="descripcio">
                 <p>Porta garatge</p>
             </div>
-            <article>
+            <article class="garatge">
                 <span>LA PORTA ESTA:</span>
                 <span id="estat-porta"></span>
-                <span class="loader loading"></span>
+               <!--  <span class="loader loading"></span> -->
             </article>
         </section>
     <main>
