--- a/public/index.html
+++ b/public/index.html
@@ -100,6 +100,24 @@
                         <canvas id="canvasHum2" width="100%" height="100%"></canvas>
                     </div>
                 </div>
+
+                <div class="pressio"></div>
+                    <div class="title-chart">
+                        <h4>Pressió</h4>
+                        <label for="pressio">
+                            <select name="Pressio" id="pressioSelection2" class="pressioSelection2">
+                                <option value="5min">5 min</option>
+                                <option value="1h" selected="selected">1h</option>
+                                <option value="dia">Diari</option>
+                                <option value="mes">Mensual</option>
+                            </select>
+                        </label>
+                    </div>
+                
+                    <div class="graficPressio">
+                        <canvas id="canvasPress2" width="100%" height="100%"></canvas>
+                    </div>
+                </div>
             </article> 
         </section>
 
