--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
                         <h4>Temperatura</h4>
                         <label for="temperatura">
                             <select name="temperaturaSelection1" id="temperaturaSelection1" class="temperaturaSelection1">
+                                <option value="1min">1 min</option>
                                 <option value="5min">5 min</option>
                                 <option value="1h" selected="selected">1h</option>
                                 <option value="dia">Diari</option>
@@ -44,6 +45,7 @@
                         <h4>Humitat Relativa</h4>
                         <label for="humitat">
                             <select name="Humitat" id="humitatSelection1" class="humitatSelection1">
+                                <option value="1min">1 min</option>
                                 <option value="5min">5 min</option>
                                 <option value="1h" selected="selected">1h</option>
                                 <option value="dia">Diari</option>
@@ -70,6 +72,7 @@
                         <h4>Temperatura</h4>
                         <label for="temperatura">
                             <select name="temperaturaSelection2" id="temperaturaSelection2" class="temperaturaSelection2">
+                                <option value="1min">1 min</option>
                                 <option value="5min">5 min</option>
                                 <option value="1h" selected="selected">1h</option>
                                 <option value="dia">Diari</option>
@@ -88,6 +91,7 @@
                         <h4>Humitat Relativa</h4>
                         <label for="humitat">
                             <select name="Humitat" id="humitatSelection2" class="humitatSelection2">
+                                <option value="1min">1 min</option>
                                 <option value="5min">5 min</option>
                                 <option value="1h" selected="selected">1h</option>
                                 <option value="dia">Diari</option>
@@ -106,6 +110,7 @@
                         <h4>Pressió</h4>
                         <label for="pressio">
                             <select name="Pressio" id="pressioSelection2" class="pressioSelection2">
+                                <option value="1min">1 min</option>
                                 <option value="5min">5 min</option>
                                 <option value="1h" selected="selected">1h</option>
                                 <option value="dia">Diari</option>
