Zero division solved

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <section id="presentacio">
-            <h1>Web de casa nostra :)</h1>
+            <h1>Pis dels Gansos</h1>
             <p>Benvinguts al projecte final d'Aplicacions de Microcontroladors.</p>
         </section>
         <section class="estacio">
@@ -131,9 +131,8 @@
                 <p>Porta garatge</p>
             </div>
             <article class="garatge">
-                <span>LA PORTA ESTA:</span>
+                <span>La porta està:</span>
                 <span id="estat-porta"></span>
-               <!--  <span class="loader loading"></span> -->
             </article>
         </section>
     <main>
